--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <string name="login_failed">"Login failed"</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="signup_title">Registrate</string>
+    <string name="signup_name">Nombre</string>
+    <string name="signup_mail">Mail</string>
+    <string name="signup_password">Contraseña</string>
+    <string name="signup_create_account">Crear cuenta</string>
+    <string name="signup_lastname">Apellidos</string>
 </resources>
