--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="steps">Pasos</string>
     <string name="write_recipe_name">Escribe una receta</string>
     <string name="by_author">Hecha por %1$s</string>
+    <string name="selected_ingredients">Ingredientes seleccionados</string>
 </resources>
