Unify RecipesAdapter and FavouriteAdapter (#11)
* Unify RecipesAdapter and FavouriteAdapter

* Delete Favourite

* Add selected ingredients recycler view

* Create favourite selector

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="ingredients">Ingredientes</string>
     <string name="steps">Pasos</string>
     <string name="write_recipe_name">Escribe una receta</string>
+    <string name="by_author">Hecha por %1$s</string>
+    <string name="selected_ingredients">Ingredientes seleccionados</string>
 </resources>
