--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="write_recipe_name">Escribe una receta</string>
     <string name="by_author">Hecha por %1$s</string>
     <string name="selected_ingredients">Ingredientes seleccionados</string>
+    <string name="recipes">Recetas</string>
 </resources>
