--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
     <string name="recipes">Recetas</string>
     <string name="example_step">Lo que resta hacer es dar vuelta nuestro omelette una vez que ya esté bien cocido de un lado para que se cocine bien del otro y listo! Al terminar, lo retiramos con cuidado y lo servimos en un plato para degustarlo y ser felices.</string>
     <string name="username">Nombre de Usuario</string>
+    <string name="lunch_channel">Almuerzo</string>
+    <string name="lunch_channel_desc">Recomendaciones a la hora del almuerzo</string>
+    <string name="dinner_channel">Cena</string>
+    <string name="dinner_channel_desc">Recomendaciones a la hora de la cena</string>
 </resources>
